Fix horizontal scroll

--- a/app/src/containers/Project/Project.css
+++ b/app/src/containers/Project/Project.css
@@ -70,9 +70,10 @@
 }
 
 .stats > div {
-  padding: 0.75rem 3rem 1.3rem;
+  padding: 0.75rem 1rem 1.3rem;
   border-right: 1px solid var(--border);
   border-bottom: 1px solid var(--border);
+  flex: 1;
 }
 
 .stats > div:last-child {
